--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,14 @@ APP_DEBUG=true
 APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=/var/www/html/database/database.sqlite # For SQLite, ensure this path is correct for your environment, or just database.sqlite for simplicity
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=laravel
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +22,12 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log # Or smtp, ses, mailgun etc.
+MAIL_MAILER=log
 MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
